# qf

./: CLAUDE.md  Cargo.toml  README.md
src/: error.rs  format.rs  lib.rs  main.rs
src/output/: color.rs  mod.rs  pretty.rs
src/parser/: csv.rs  json.rs  mod.rs  toml.rs  tsv.rs  xml.rs  yaml.rs
src/query/: ast.rs  builtins.rs  env.rs  eval.rs  jq_parser.rs  lexer.rs  mod.rs  path.rs
src/stream/: csv.rs  json.rs  mod.rs  xml.rs
test_data/: sample.csv  sample.json  sample.toml  sample.tsv  sample.xml  sample.yaml
