[package]
name = "qf"
version = "0.1.0"
edition = "2021"
description = "A fast, universal data format query tool"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.37", features = ["serialize"] }
toml = "0.8"
csv = "1.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tempfile = "3.14"
